--- a/index.html
+++ b/index.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Front-end</title>
-	<style>
-		/* Critical styling goes here */
-	</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Front-end</title>
+    <style>
+        /* Critical styling goes here */
+    </style>
 </head>
+
 <body>
-	
-	<!-- Start content -->
 
-	<!-- End content -->
+    <!-- Start content -->
 
-	<script src="js/app.js" defer></script>
-	<script>
-		document.addEventListener('DOMContentLoaded', () => {
-			const stylesheet = document.createElement('link');
-			stylesheet.href = 'css/style.css';
-			stylesheet.rel = 'stylesheet';
-			stylesheet.type = 'text/css';
-			document.getElementsByTagName('head')[0].appendChild(stylesheet);
-		});
-	</script>
-	<noscript>
-		<link rel="stylesheet" href="css/style.css">
-	</noscript>
+    <dl></dl>
+
+    <!-- End content -->
+    <script type="text/javascript" src="js/testdata1.json" defer></script>
+    <script type="text/javascript" src="js/testdata2.json" defer></script>
+
+    <script type="text/javascript" src="js/data.json" defer></script>
+    <script src="js/app.js" defer></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const stylesheet = document.createElement('link');
+            stylesheet.href = 'css/style.css';
+            stylesheet.rel = 'stylesheet';
+            stylesheet.type = 'text/css';
+            document.getElementsByTagName('head')[0].appendChild(stylesheet);
+        });
+    </script>
+    <noscript>
+        <link rel="stylesheet" href="css/style.css">
+    </noscript>
 </body>
+
 </html>
