--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     <dl></dl>
 
     <!-- End content -->
-    <script type="text/javascript" src="js/testdata1.json" defer></script>
-    <script type="text/javascript" src="js/testdata2.json" defer></script>
 
-    <script type="text/javascript" src="js/data.json" defer></script>
+
+    <!-- <script type="text/javascript" src="js/data.json" defer></script> -->
     <script src="js/app.js" defer></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
